--- a/views/index.erb
+++ b/views/index.erb
@@ -5,41 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="/favicon.png" />
-    <title>Jake Quits</title>
+    <title><%= @title  %></title>
     <meta
       name="description"
-      content="jake albaugh quit nicotine. this is helping him along the way."
+      content="<%= @full_name %> quit nicotine. this is helping him along the way."
     />
-    <meta itemprop="name" content="Jake Quits" />
+    <meta itemprop="name" content="<%= @name %> Quits" />
     <meta
       itemprop="description"
-      content="jake albaugh quit nicotine. this is helping him along the way."
+      content="<%= @full_name %> quit nicotine. this is helping him along the way."
     />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="Jake Quits" />
+    <meta name="twitter:title" content="<%= @name %> Quits" />
     <meta
       name="twitter:description"
-      content="jake albaugh quit nicotine. this is helping him along the way."
+      content="<%= @full_name %> quit nicotine. this is helping him along the way."
     />
-    <meta name="twitter:site" content="@jake_albaugh" />
-    <meta name="twitter:creator" content="@jake_albaugh" />
-    <meta name="og:title" content="Jake Quits" />
+    <meta name="twitter:site" content="<%= @twitter %>" />
+    <meta name="twitter:creator" content="<%= @twitter %>" />
+    <meta name="og:title" content="<%= @name %> Quits" />
     <meta
       name="og:description"
-      content="jake albaugh quit nicotine. this is helping him along the way."
+      content="<%= @full_name %> quit nicotine. this is helping him along the way."
     />
     <meta name="og:url" content="https://jakequits.com" />
-    <meta name="og:site_name" content="Jake Quits" />
+    <meta name="og:site_name" content="<%= @name %> Quits" />
     <meta name="og:type" content="website" />
     <link rel="stylesheet" href="app.css" />
   </head>
   <body>
     <div id="app">
       <header class="container">
-        <h1>jake quits.</h1>
+        <h1><%= @name %> Quits.</h1>
         <p>
           <a href="https://twitter.com/jake_albaugh" target="blank"
-            >jake albaugh</a
+            ><%= @full_name %></a
           >
           quit nicotine. this is helping him along the way.
         </p>
@@ -99,7 +99,7 @@
         <div class="progress dark">
           <div class="right">
             <h2>
-              <span>$<span id="dollars"></span></span
+            <span><%= @currency %><span id="dollars"></span></span
               ><small>.<span id="cents"></span></small>
             </h2>
             <h3>Saved</h3>
@@ -165,6 +165,22 @@
         </div>
       </div>
     </div>
+    <script>
+        const data = {
+            years: null,
+            months: null,
+            weeks: null,
+            days: null,
+            hours: null,
+            minutes: null,
+            seconds: null,
+            savings: null,
+            dollars: null,
+            cents: null,
+            dailyCost: <%= @daily_cost %>,
+            time: new Date("<%= @last_cigarette %>")
+        };
+    </script>
     <script src="app.js"></script>
   </body>
 </html>
