--- a/views/index.erb
+++ b/views/index.erb
@@ -21,8 +21,8 @@
       name="twitter:description"
       content="<%= @full_name %> quit nicotine. this is helping him along the way."
     />
-    <meta name="twitter:site" content="<%= @twitter %>" />
-    <meta name="twitter:creator" content="<%= @twitter %>" />
+    <meta name="twitter:site" content="@<%= @twitter %>" />
+    <meta name="twitter:creator" content="@<%= @twitter %>" />
     <meta name="og:title" content="<%= @name %> Quits" />
     <meta
       name="og:description"
@@ -38,7 +38,7 @@
       <header class="container">
         <h1><%= @name %> Quits.</h1>
         <p>
-          <a href="https://twitter.com/jake_albaugh" target="blank"
+	<a href="https://twitter.com/<%= @twitter %>" target="blank"
             ><%= @full_name %></a
           >
           quit nicotine. this is helping him along the way.
