add deploy to heroku button

--- a/views/index.erb
+++ b/views/index.erb
@@ -38,7 +38,7 @@
       <header class="container">
         <h1><%= @name %> Quits.</h1>
         <p>
-	<a href="https://twitter.com/<%= @twitter %>" target="blank"
+	<a href="https://twitter.com/<%= @twitteR %>" target="blank"
             ><%= @full_name %></a
           >
           quit nicotine. this is helping him along the way.
